src/objects/Permissions_change_log__c.object
<CustomObject>
    <fields>
        <fullName>ContactPortalUserHistory__c</fullName>
        <label>ContactPortalUserHistory</label>
        <referenceTo>ContactPortalUserHistory__c</referenceTo>
        <relationshipLabel>Permissions_change_log</relationshipLabel>
        <relationshipName>Permissions_change_log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OldValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SystemName__c</fullName>
        <label>SystemName</label>
        <picklist>
            <picklistValues>
                <fullName>docs/docs-customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>docs/docs-internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>docs/docs-partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>docs/docs-partner-fez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-appd4db</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-archives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-bmcmarketzone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-phpbeta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/onpremise-rightscale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/partners-azure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/saas-bmcmarketzone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>download-zones/saas-public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>learning-system/lms-learner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Permissions_change_log</label>
    <nameField>
        <label>Permissions_change_log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions_change_log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>